fix: align items

--- a/src/components/TopFive/TopFive.css
+++ b/src/components/TopFive/TopFive.css
@@ -10,8 +10,7 @@
     min-width: 400px;
     height: auto;
     padding: 10px;
-    margin: 10px;
-    
+    margin: 0 auto;    
 }
 
 .topFiveCardForm__container {
@@ -21,7 +20,7 @@
     box-shadow: 0 6px 10px rgba(0,0,0,.25), 0 0 6px rgba(0,0,0,.15);
     background-color: white;
     max-width: 750px;
-    left: 30%;
+    /* left: 30%; */
 }
 
 .topFiveCardForm__containerEdit {
@@ -31,7 +30,7 @@
     box-shadow: 0 6px 10px rgba(0,0,0,.25), 0 0 6px rgba(0,0,0,.15);
     background-color: white;
     max-width: 750px;
-
+    left: 35%;
 }
 
 
@@ -57,7 +56,11 @@
 }
 
 .nes-container {
-    margin: 10px !important; 
+    margin: 10px !important;
+}
+
+.is-rounded {
+    margin: 0 auto;
 }
 
 .mainFeed-following, .mainFeed-discover, .mainFeed-myTopFive {
